# Pretix_HelloAsso

pretix-helloasso/: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
pretix-helloasso/.github/workflows/: style.yml  tests.yml
pretix-helloasso/pretix_helloasso/: apps.py  payment.py  signals.py  views.py
pretix-helloasso/pretix_helloasso/locale/de/LC_MESSAGES/: django.po
